--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,24 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/icons.css"/>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand text-verde" href="#">TeleConsulta</a>
+      <ul class="navbar-nav ml-auto" id="botones">
+      </ul>
+    </nav>
     <div id="display-content" class="mx-auto"></div>
+    <script src="../node_modules/firebase/firebase-app.js"></script>
+    <script src="../node_modules/firebase/firebase-auth.js"></script>
+    <script src="../node_modules/firebase/firebase-database.js"></script>
+    <script src="../node_modules/firebase/firebase-analytics.js"></script>
     <script>window.$ = window.jQuery = require('./js/jquery-3.5.1.min.js');</script>
     <script src='js/bootstrap.min.js'></script>
     <script src='https://meet.jit.si/external_api.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="js/firebase.js"></script>
     <script src='js/app.js'></script>
   </body>
 </html>
