added upload file functionality

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <script src="../node_modules/firebase/firebase-auth.js"></script>
     <script src="../node_modules/firebase/firebase-database.js"></script>
     <script src="../node_modules/firebase/firebase-analytics.js"></script>
+    <script src="../node_modules/firebase/firebase-storage.js"></script>
     <script>window.$ = window.jQuery = require('./js/jquery-3.5.1.min.js');</script>
     <script src='js/bootstrap.min.js'></script>
     <script src='https://meet.jit.si/external_api.js'></script>
